--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,7 +92,7 @@ const posts = (await getCollection('blog')).sort(
 					{
 						posts.map((post) => (
 							<li>
-								<a href={`/flyff-u-snapshot-comparisons/${post.id}/`}>
+								<a href={`/${post.id}/`}>
 									
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
