--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,10 +3,11 @@ import type { CollectionEntry } from 'astro:content';
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import FormattedDate from '../components/FormattedDate.astro';
+import TableOfContents from "../components/TableOfContents.astro";
 
 type Props = CollectionEntry<'blog'>['data'];
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { title, description, pubDate, updatedDate, heroImage, remarkPluginFrontmatter } = Astro.props;
 ---
 
 <html lang="en">
@@ -17,15 +18,6 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				width: calc(100% - 2em);
 				max-width: 100%;
 				margin: 0;
-			}
-			.hero-image {
-				width: 100%;
-			}
-			.hero-image img {
-				display: block;
-				margin: 0 auto;
-				border-radius: 12px;
-				box-shadow: var(--box-shadow);
 			}
 			.prose {
 				width: 920px;
@@ -55,8 +47,8 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 
 	<body>
 		<Header />
-		<main>
-			<article>
+		<main style="display: flex; gap: 2rem;  margin: 0 auto;">
+			<article style="flex: 3;">
 				<div class="prose">
 					<div class="title">
 						<div class="date">
@@ -75,6 +67,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 					<slot />
 				</div>
 			</article>
+			<TableOfContents chapters={remarkPluginFrontmatter.tableOfContents} />
 		</main>
 	</body>
 </html>
